Fixing the notice to be align center

--- a/app/javascript/styles/backend/application.scss
+++ b/app/javascript/styles/backend/application.scss
@@ -6,7 +6,8 @@
   border-left: 3px solid #8c8c8c;
   
   .text-middle {
-    vertical-align: middle;
+    height: 50px;
+    line-height: 50px;
   }
 }
 
